# tasm-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml
derive_tasm_object/: Cargo.toml
derive_tasm_object/src/: lib.rs
tasm-lib/: Cargo.toml  common_sequences_manual_analysis.md  count_patterns.py  stark_verifier.instructions
tasm-lib/benchmarks/: compute_terminal_const_sized_static_symbols_symbol_count_256_15758478658178208130.json  fibo_test.json  mul_two_u64s_to_u128_u64.json  sample_indices.json  tasm_arithmetic_bfe_primitive_root_of_unity.json  tasm_arithmetic_u128_add.json  tasm_arithmetic_u128_safe_mul.json  tasm_arithmetic_u128_shift_left.json  tasm_arithmetic_u128_shift_left_static_5.json  tasm_arithmetic_u128_shift_right.json  tasm_arithmetic_u128_shift_right_static_5.json  tasm_arithmetic_u128_sub.json  tasm_arithmetic_u32_is_u32.json  tasm_arithmetic_u32_isodd.json  tasm_arithmetic_u32_isu32.json  tasm_arithmetic_u32_leadingzeros.json  tasm_arithmetic_u32_next_power_of_two.json  tasm_arithmetic_u32_or.json  tasm_arithmetic_u32_overflowingadd.json  tasm_arithmetic_u32_safe_pow_u32.json  tasm_arithmetic_u32_safeadd.json  tasm_arithmetic_u32_safemul.json  tasm_arithmetic_u32_safepow.json  tasm_arithmetic_u32_safesub.json  tasm_arithmetic_u32_shift_right_u32.json  tasm_arithmetic_u32_shiftleft.json  tasm_arithmetic_u32_shiftright.json  tasm_arithmetic_u64_add.json  tasm_arithmetic_u64_and.json  tasm_arithmetic_u64_decr.json  tasm_arithmetic_u64_div2.json  tasm_arithmetic_u64_div_mod.json  tasm_arithmetic_u64_eq.json  tasm_arithmetic_u64_incr.json  tasm_arithmetic_u64_index_of_last_nonzero_bit.json  tasm_arithmetic_u64_leading_zeros.json  tasm_arithmetic_u64_log_2_floor.json  tasm_arithmetic_u64_lt_standard.json  tasm_arithmetic_u64_mul_two_u64s_to_u128_u64.json  tasm_arithmetic_u64_or_u64.json  (+524 more)
tasm-lib/profiles/: fibo_test.profile  tasm_recufier_standalone_fri_verify.profile
tasm-lib/src/: algorithm.rs  arithmetic.rs  array.rs  assertion_error_ids.md  closure.rs  compiled_program.rs  data_type.rs  exported_snippets.rs  function.rs  hashing.rs  io.rs  lib.rs  library.rs  linker.rs  list.rs  memory.rs  mmr.rs  neptune.rs  performance_experiments.rs  prelude.rs  procedure.rs  pseudo.rs  ram_builder.rs  recufier.rs  rust_shadowing_helper_functions.rs  snippet.rs  snippet_bencher.rs  structure.rs  test_helpers.rs  traits.rs  verifier.rs
tasm-lib/src/arithmetic/: bfe.rs  i128.rs  u128.rs  u160.rs  u192.rs  u32.rs  u64.rs  xfe.rs  xfe_ntt.rs
tasm-lib/src/array/: horner_evaluation.rs  inner_product_of_three_rows_with_weights.rs  inner_product_of_xfes.rs  sum_of_bfes.rs  sum_of_xfes.rs
tasm-lib/src/hashing/: absorb.rs  absorb_multiple.rs  absorb_multiple_static_size.rs  algebraic_hasher.rs  divine_sibling_u64_index.rs  eq_digest.rs  hash_from_stack.rs  hash_varlen.rs  load_auth_path_from_secret_in_safe_list.rs  load_auth_path_from_secret_in_unsafe_list.rs  load_auth_path_from_std_in_safe_list.rs  load_auth_path_from_std_in_unsafe_list.rs  lt_digest.rs  merkle_root.rs  merkle_root_from_xfes.rs  merkle_root_from_xfes_generic.rs  merkle_root_from_xfes_static_size.rs  merkle_root_from_xfes_wrapper.rs  merkle_root_static_size.rs  merkle_step_mem_u64_index.rs  merkle_step_u64_index.rs  merkle_verify.rs  reverse_digest.rs  sample_indices.rs  sponge_hasher.rs  squeeze_repeatedly.rs  squeeze_repeatedly_static_number.rs  swap_digest.rs
tasm-lib/src/io/: load_from_input.rs  load_struct_from_input.rs  read_input.rs  read_secret.rs  read_stdin.rs  write_to_stdout.rs
tasm-lib/src/list/: contains.rs  dot_product_xfes.rs  get.rs  horner_evaluation_dynamic_length.rs  length.rs  multiset_equality.rs  multiset_equality_digests.rs  multiset_equality_u64s.rs  new.rs  pop.rs  push.rs  range.rs  set.rs  set_length.rs  split_off.rs  sum_bfes.rs  sum_xfes.rs  swap_unchecked.rs
tasm-lib/src/memory/: dyn_malloc.rs  dyn_malloc_const_size.rs  memcpy.rs  push_ram_to_stack.rs
tasm-lib/src/mmr/: authentication_struct.rs  bag_peaks.rs  calculate_new_peaks_from_append.rs  calculate_new_peaks_from_leaf_mutation.rs  data_index_to_node_index.rs  get_height_from_data_index.rs  leaf_index_to_mt_index.rs  leaf_index_to_mt_index_and_peak_index.rs  left_child.rs  leftmost_ancestor.rs  load_from_secret_in_then_verify.rs  non_leaf_nodes_left.rs  right_child.rs  right_child_and_height.rs  right_lineage_count_and_own_height.rs  right_lineage_length.rs  root_from_authentication_struct.rs  verify_from_memory.rs  verify_from_secret_in.rs  verify_from_secret_in_leaf_index_on_stack.rs  verify_from_secret_in_secret_leaf_index.rs  verify_mmr_successor.rs
tasm-lib/src/neptune/: neptune_like_types_for_tests.rs
tasm-lib/src/other_snippets/: bfe_add.rs
tasm-lib/src/performance_experiments/: loop_no_unrolling.rs  no_unrolling.rs  program_size_impact.rs  with_unrolling.rs
tasm-lib/src/pseudo/: lsb.rs  neg.rs  sub.rs
tasm-lib/src/recufier/: assert_stdin_starts_with_own_program_digest.rs  challenges.rs  claim.rs  eval_arg.rs  fri.rs  fri_verify.rs  get_colinear_y.rs  get_colinearity_check_x.rs  get_collinear_y.rs  get_collinearity_check_x.rs  instantiate_fiat_shamir_with_claim.rs  master_ext_table.rs  merkle_tree_ap_verify_from_secret_input.rs  merkle_verify.rs  out_of_domain_points.rs  own_program_digest.rs  proof_stream.rs  read_and_verify_own_program_digest_from_std_in.rs  standalone_fri_verify.rs  stark_verify.rs  verify_authentication_paths_for_leaf_and_index_list.rs  vm_proof_iter.rs  xfe_ntt.rs  xfe_ntt_autogen.rs
tasm-lib/src/rust_shadowing_helper_functions/: array.rs  claim.rs  dyn_malloc.rs  input.rs  list.rs  memory.rs  safe_list.rs  unsafe_list.rs
tasm-lib/src/structure/: auto_generated_tasm_object_implementations.rs  manual_tasm_object_implementations.rs  tasm_object.rs  verify_nd_si_integrity.rs
tasm-lib/src/traits/: accessor.rs  algorithm.rs  basic_snippet.rs  closure.rs  compiled_program.rs  deprecated_snippet.rs  function.rs  mem_preserver.rs  procedure.rs  read_only_algorithm.rs  rust_shadow.rs
tasm-object-derive/: Cargo.toml
tasm-object-derive/src/: lib.rs
(+595 files in other folders)
