[workspace]
members = ["tasm-lib", "tasm-object-derive"]
resolver = "2"

[workspace.package]
version = "0.48.0"
edition = "2021"
authors = ["Triton Software AG"]
license = "Apache-2.0"
homepage = "https://triton-vm.org/"
documentation = "https://docs.rs/tasm-lib/"
repository = "https://github.com/TritonVM/tasm-lib"
readme = "README.md"

[profile.release]
lto = "thin"

[workspace.dependencies.tasm-object-derive]
version = "0.48.0"
path = "tasm-object-derive"

[workspace.lints.rust]
edition-2024-expr-fragment-specifier = "allow"  # accept the new `expr` fragment specifier rules
if-let-rescope = "allow"                        # accept the new `if-let` scope
rust-2024-compatibility = "warn"
