[package]
name = "derive_tasm_object"
version = "0.1.0"
edition = "2021"
description = "Derive macro for TasmObject"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "^1", features = ["full", "derive"] }
quote = "1.0"

[lib]
proc-macro = true
