[package]
name = "tasm-lib"
description = """
Code snippets for Triton VM assembly with tests and statistics.
"""

keywords = ["Triton-VM", "zero-knowledge", "STARK", "virtual-machine", "recursive"]
categories = ["cryptography"]

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
readme.workspace = true

[dev-dependencies]
proptest = "1.5"
proptest-arbitrary-interop = "0.1"
rayon = "1"
test-strategy = "0.4"

[dependencies]
anyhow = "1"
arbitrary = { version = "1", features = ["derive"] }
const_format = "0.2"
hex = "^0.4.3"
itertools = "0"
ndarray = { version = "0.16" }
num = "0"
num-traits = "0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tasm-object-derive.workspace = true
triton-vm = { version = "0.44.0" }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
